2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs:
	* Data/WellKnownText/SimpleFeatureAccess.cs: more localization fixes

2009-01-13  Scott Ellington  <scott.ellington@gmail.com>

	* Data/WellKnownText/SimpleFeatureAccess.cs: use invariant culture to
	avoid locale problems

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/KeyholeMarkupLanguage.cs: add back map2kml minus .net 3.5 stuff

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* epsg:
	* docs/epsg:
	* Cumberland.csproj: move to toplevel to workaround MD bug

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* docs/epsg:
	* Cumberland.csproj: add own copy of epsg codes

	* Projection/ProjFourWrapper.cs: add CustomSearchPath

2009-01-12  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/DBaseIIIFile.cs: support float column in dBase IV

2009-01-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs: add Clone()

2009-01-05  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/Shapefile.cs:  make DbfFile accessible

	* Projection/ProjFourWrapper.cs: add ProjFourException

2008-12-30  Scott Ellington  <scott.ellington@gmail.com>

	* Xml/Serialization/MapSerializer.cs: don't write empty options

2008-12-30  Scott Ellington  <scott.ellington@gmail.com>

	* Layer.cs: make method public

2008-12-19  Full Name  <Email Address>

	* Cumberland.csproj: reset lang version

2008-12-19  Full Name  <Email Address>

	* Data/IFeatureSource.cs:
	* Data/AbstractDatabaseFeatureSource.cs: add AbstractDataSource, add
	IFeatureSource.Extents

	* Data/KeyholeMarkupLanguage.cs: remove kml so I don't have to deal with
	it

	* Cumberland.csproj: set c# to ISO 2

2008-12-15  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add FillStyle.Texture and
	Style.FillTexturePath

2008-12-13  Scott Ellington  <scott.ellington@gmail.com>
